--- a/package.json
+++ b/package.json
@@ -13,20 +13,25 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint --ignore-path .gitignore .",
+    "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
     "gatsby": "^4.18.0",
     "gatsby-plugin-image": "^2.18.0",
     "gatsby-plugin-sharp": "^4.18.0",
-    "gatsby-source-contentful": "^7.16.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
+    "@graphql-eslint/eslint-plugin": "^3.10.4",
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "eslint": "^8.19.0",
     "typescript": "^4.7.4"
   }
 }
