--- a/package.json
+++ b/package.json
@@ -18,20 +18,30 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "gatsby": "^4.18.0",
-    "gatsby-plugin-image": "^2.18.0",
-    "gatsby-plugin-sharp": "^4.18.0",
+    "@mdx-js/mdx": "v1",
+    "@mdx-js/react": "v1",
+    "gatsby": "^4.18.2",
+    "gatsby-plugin-image": "^2.18.1",
+    "gatsby-plugin-mdx": "^3.18.1",
+    "gatsby-plugin-sharp": "^4.18.1",
+    "gatsby-source-filesystem": "^4.18.1",
+    "gatsby-transformer-sharp": "^4.18.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@graphql-eslint/eslint-plugin": "^3.10.4",
+    "@graphql-eslint/eslint-plugin": "^3.10.6",
+    "@types/mdx-js__react": "^1.5.5",
     "@types/node": "^17.0.45",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.19.0",
+    "gatsby-plugin-postcss": "^5.18.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   }
 }
