--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
+    "develop": "gatsby develop --host 0.0.0.0",
+    "start": "gatsby develop --host 0.0.0.0",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -25,12 +25,15 @@
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-image": "^2.18.1",
     "gatsby-plugin-mdx": "^3.18.1",
+    "gatsby-plugin-react-helmet": "^5.20.0",
     "gatsby-plugin-sharp": "^4.18.1",
     "gatsby-source-filesystem": "^4.18.1",
     "gatsby-transformer-sharp": "^4.18.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@graphql-eslint/eslint-plugin": "^3.10.6",
@@ -40,6 +43,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "autoprefixer": "^10.4.7",
@@ -52,6 +56,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-postcss": "^5.18.0",
     "gatsby-plugin-prettier-eslint": "^1.0.6",
     "postcss": "^8.4.14",
