--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-sharp": "^4.18.1",
     "gatsby-source-filesystem": "^4.18.1",
     "gatsby-transformer-sharp": "^4.18.1",
+    "immer": "^9.0.15",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.1.0",
